# Santander-customer-satisfaction-prediction

./: .dockerignore  .gitignore  README copy.md  README.md  dockerfile  main.py  modelTest.ipynb  notebook.ipynb  predict.py  pyproject.toml  requirements.txt  train.py
examples/: 0.json  1.json  10.json  11.json  666.json  7.json  8.json  9.json
models/: best_model.pkl
scripts/: download_data.py
src/: config.py  data.py
